@@ -1,5 +1,22 @@
 <script setup lang="ts">
+import type { Fog } from "mapbox-gl";
+import { reactive } from "vue";
+
 const accessToken = import.meta.env.VITE_ACCESS_TOKEN;
+
+interface IState {
+  fog: Fog;
+  visible: boolean;
+}
+
+const state = reactive<IState>({
+  fog: {
+    color: "#242b4b",
+    range: [-1, 2],
+    "horizon-blend": 0.2,
+  },
+  visible: true,
+});
 </script>
 
 <template>
@@ -15,8 +32,17 @@ const accessToken = import.meta.env.VITE_ACCESS_TOKEN;
         style: 'mapbox://styles/mapbox/satellite-streets-v11',
       }"
     >
-      <v-fog color="#242B4B" :range="[-1, 2]" :horizon-blend="0.2" />
+      <v-fog
+        v-if="state.visible"
+        :color="state.fog.color"
+        :range="state.fog.range"
+        :horizon-blend="state.fog['horizon-blend']"
+      />
     </v-map>
+    <div class="control">
+      <button @click="state.visible = true">Init Fog</button>
+      <button @click="state.visible = false">Clear Fog</button>
+    </div>
   </div>
 </template>
 
@@ -24,5 +50,14 @@ const accessToken = import.meta.env.VITE_ACCESS_TOKEN;
 .container {
   height: 100vh;
   width: 100%;
+}
+.control {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 </style>
